--- a/SamsungIoTClient/SamsungIoTClient/Views/MainPage.xaml
+++ b/SamsungIoTClient/SamsungIoTClient/Views/MainPage.xaml
@@ -37,6 +37,17 @@
                 <views:BoilerStatusListViewPage1 />
             </x:Arguments>
         </NavigationPage>
+
+        <NavigationPage Title="Комнаты">
+            <NavigationPage.Icon>
+                <OnPlatform x:TypeArguments="FileImageSource">
+                    <On Platform="iOS" Value="tab_about.png"/>
+                </OnPlatform>
+            </NavigationPage.Icon>
+            <x:Arguments>
+                <views:RoomsStatusListPage />
+            </x:Arguments>
+        </NavigationPage>
     </TabbedPage.Children>
     
 </TabbedPage>
