--- a/SamsungIoTClient/SamsungIoTClient/Views/MainPage.xaml
+++ b/SamsungIoTClient/SamsungIoTClient/Views/MainPage.xaml
@@ -5,7 +5,7 @@
             x:Class="SamsungIoTClient.Views.MainPage">
 
     <TabbedPage.Children>
-        <NavigationPage Title="Browse">
+        <!--<NavigationPage Title="Browse">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_feed.png"/>
@@ -14,18 +14,8 @@
             <x:Arguments>
                 <views:ItemsPage />
             </x:Arguments>
-        </NavigationPage>
-        
-        <NavigationPage Title="About">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_about.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:AboutPage />
-            </x:Arguments>
-        </NavigationPage>
+        </NavigationPage>-->
+
 
         <NavigationPage Title="Сведения">
             <NavigationPage.Icon>
@@ -48,6 +38,17 @@
                 <views:RoomsStatusListPage />
             </x:Arguments>
         </NavigationPage>
+
+        <NavigationPage Title="About">
+            <NavigationPage.Icon>
+                <OnPlatform x:TypeArguments="FileImageSource">
+                    <On Platform="iOS" Value="tab_about.png"/>
+                </OnPlatform>
+            </NavigationPage.Icon>
+            <x:Arguments>
+                <views:AboutPage />
+            </x:Arguments>
+        </NavigationPage>
+
     </TabbedPage.Children>
-    
 </TabbedPage>
